--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.0.9",
+    "vite-svg-plugin": "^1.0.1",
     "vue-tsc": "^0.40.7"
   }
 }
