--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "element-plus": "^2.2.16",
+    "js-cookie": "^3.0.1",
     "path-browserify": "^1.0.1",
+    "pinia": "^2.0.22",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^16.11.56",
     "@types/path-browserify": "^1.0.0",
     "@vitejs/plugin-vue": "^3.0.3",
@@ -26,6 +30,7 @@
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.0.9",
+    "vite-plugin-mock": "^2.9.6",
     "vite-svg-plugin": "^1.0.1",
     "vue-tsc": "^0.40.7"
   }
