--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "env.d.ts",
     "src/**/*",
     "src/**/*.vue",
-    "types"
+    "types",
+    "mock"
   ],
   "compilerOptions": {
     "baseUrl": ".",
