--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "element-plus": "^2.2.16",
-    "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "pinia": "^2.0.22",
+    "vant": "^4.0.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -33,7 +32,9 @@
     "unplugin-vue-components": "^0.22.7",
     "vite": "^3.0.9",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-windicss": "^1.8.8",
     "vite-svg-plugin": "^1.0.2",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^0.40.7",
+    "windicss": "^3.5.6"
   }
 }
