--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-windicss": "^1.8.8",
     "vite-svg-plugin": "^1.0.2",
-    "vue-tsc": "^0.40.7",
-    "windicss": "^3.5.6"
+    "vue-tsc": "^0.40.7"
   }
 }
